Changes for 1.7.0.5
* Created a headless UIContext for use with headless game server, so that it may run on a linux platform that has no configured graphics environment. (veqryn)


Changes for 1.7.0.3
* Got headless game to show options to client's, for changing the game, changing to an autosave, sending a save to the server, and getting the savegame from the host. (veqryn)

* Got headless game to restart its lobby connection once per 8 hours. (veqryn)

* Got headless game server to be able to connect to lobby, and host games repeatedly without requiring any UI or swing event thread. Also got to immediately reload autosave when a player quits. (veqryn)

* Got headless game server to be able to pick games, and have a mini-ui for hosting and for during the game. (veqryn)

* Got headless game server to be able to host minimap, with the game screen headless. (veqryn)

* First pass at setting up framework for a headless game server. (veqryn)

* Preventing AA units with maxRoundsAA from getting removed early from battle. (veqryn)

* Fixed bug causing Random Territory Start delegate to fail in online games due to requesting dice too quickly. (veqryn)

* Updating Great War ww1 map and xml, to improve options and balance. (veqryn)

* Updating packaged JRE to Java 7 update 21 for x86. (veqryn)

* Made fuelCost no longer charge for allied air dependants, paratroopers, and owned air on owned fighters not making an attack. (veqryn)

* Created new game option property, "Use Fuel Cost", which will control if we charge for fuel in our movement. (veqryn)

* Added an option to turn off the end of turn report, into the game menu bar. (veqryn)

* Changed engine preference for max memory into a "system.ini" file, that way a user can delete or reinstall TripleA if they screw up. (veqryn)

* Created new engine preference option to set the maximum memory used for triplea, for joining, hosting, and also an option to have triplea always restart with higher memory maximum. (veqryn)
