@@ -1,2 +1,2 @@
 cd $(dirname $0)
-java -server -Xmx64m -classpath bin/triplea.jar games.strategy.engine.framework.HeadlessGameServer triplea.game.host.ui=false triplea.game= triplea.server=true triplea.port=3304 triplea.name=HostBot1_TripleAWarClub triplea.lobby.game.hostedBy=HostBot1_TripleAWarClub triplea.lobby.host=173.255.229.134 triplea.lobby.port=3303 triplea.lobby.game.comments="automated_hosting_service"
+java -server -Xmx64m -classpath bin/triplea.jar games.strategy.engine.framework.HeadlessGameServer triplea.game.host.console=true triplea.game.host.ui=false triplea.game= triplea.server=true triplea.port=3304 triplea.name=HostBot1_TripleAWarClub triplea.lobby.game.hostedBy=HostBot1_TripleAWarClub triplea.lobby.host=173.255.229.134 triplea.lobby.port=3303 triplea.lobby.game.comments="automated_hosting_service"
